--- a/Linked_List/package.json
+++ b/Linked_List/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "Linked_List",
+  "name": "linked_list",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
